added terms and privacypolicy

--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
                             </div>
                         </div>
                         <div class="project-content">
-                            <h3 class="project-title">OmniAuth YahooJp</h3>
+                            <h3 class="project-title">omniauth-yahoojp(omniauth for Yahoo! JAPAN ID)</h3>
                             <p class="project-description">
-                                Official OmniAuth strategy for authenticating with Yahoo! JAPAN's YConnect service using OAuth 2.0 and OpenID Connect.
+                                OmniAuth strategy for authenticating with Yahoo! JAPAN's YConnect service using OAuth 2.0 and OpenID Connect.
                             </p>
                             <div class="project-tech">
                                 <span class="tech-tag">Ruby</span>
@@ -151,7 +151,13 @@
 
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 mikanmarusan. All rights reserved.</p>
+            <div class="footer-content">
+                <p>&copy; 2024 mikanmarusan. All rights reserved.</p>
+                <div class="footer-links">
+                    <a href="terms.html" class="footer-link">Terms of Service</a>
+                    <a href="privacypolicy.html" class="footer-link">Privacy Policy</a>
+                </div>
+            </div>
         </div>
     </footer>
 
