--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>mikanmarusan - Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 </head>
 <body>
     <nav class="navbar">
@@ -140,7 +140,7 @@
                             <span>GitHub</span>
                         </a>
                         <a href="https://twitter.com/mikanmarusan" class="contact-link">
-                            <i class="fab fa-twitter"></i>
+                            <i class="fab fa-x-twitter"></i>
                             <span>X</span>
                         </a>
                     </div>
